course overview courses tab content alignment issue fixed

--- a/emphasize/scss/moodle/custom.scss
+++ b/emphasize/scss/moodle/custom.scss
@@ -767,3 +767,7 @@ header span.hidden-md-down .search-input-wrapper form.search-input-form {
 .block_myoverview .courses-view-course-item {
     padding: .75rem 1.25rem;
 }
+.block_myoverview .courses-view-course-item .course-info-container .media .media-body {
+    width: 100%;
+    float: left;
+}
